# agent-sync

./: .gitignore  Cargo.toml  README.md
src/: adapters.rs  apply.rs  discover.rs  fsx.rs  lib.rs  main.rs  manifest.rs  mcp.rs  pack.rs
tests/: e2e.rs
