[package]
name = "agent-sync"
version = "0.1.0"
edition = "2021"
description = "Synchronize personal agent tooling across local coding agents."
license = "MIT"
repository = "https://github.com/alexanderattar/agent-sync"
include = ["src/**", "tests/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml_edit = { version = "0.22", features = ["serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.14"
